--- a/css/styles.css
+++ b/css/styles.css
@@ -73,13 +73,12 @@ header {
 
 .navbar {
   display: flex;
-  justify-content: center;
-  justify-content: space-around;
   position: fixed;
   background-color: white;
   color: black;
   bottom: 0;
   font-size: 48px;
   width: 100%;
+  height: 5rem;
   background-color: steelblue;
 }
