--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,13 @@ header {
 .navbar {
   display: flex;
   position: fixed;
+  justify-content: space-around;
   background-color: white;
   color: black;
   bottom: 0;
   font-size: 48px;
   width: 100%;
-  height: 5rem;
+  min-height: 3rem;
   background-color: steelblue;
+  padding-top: 1rem;
 }
